--- a/details.html
+++ b/details.html
@@ -26,15 +26,12 @@
       />
       <a href="back-office.html">Back Office</a>
     </header>
-
-    <main
-      class="container mt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4"
-    ></main>
+    <main class="container mt-3"></main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/script-index.js"></script>
+    <script src="assets/js/details.js"></script>
   </body>
 </html>
