--- a/back-office.html
+++ b/back-office.html
@@ -60,7 +60,7 @@
           />
           <label for="productPrice" class="mt-3 fw-bold fs-4">PREZZO</label>
           <input
-            type="text"
+            type="number"
             name="priceField"
             id="productPrice"
             placeholder="Inserisci prezzo prodotto"
@@ -87,7 +87,11 @@
               </button>
             </div>
             <div class="col-3">
-              <button type="submit" class="w-100 bg-info border-0">
+              <button
+                type="submit"
+                id="addItemBtn"
+                class="w-100 bg-info border-0"
+              >
                 Inserisci Prodotto
               </button>
             </div>
