--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header
-      class="container-fluid bg-black d-flex justify-content-between align-items-center py-3"
+      class="container-fluid bg-black d-flex justify-content-between align-items-center px-5 py-3"
     >
       <img
         src="https://cdn.freebiesupply.com/images/large/2x/amazon-logo-white.png"
@@ -28,6 +28,7 @@
     </header>
 
     <main
+      id="main"
       class="container mt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4"
     ></main>
     <script
