--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main
       id="main"
-      class="container mt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4"
+      class="container-fluid mt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center"
     ></main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
