--- a/back-office.html
+++ b/back-office.html
@@ -27,7 +27,7 @@
       <nav><a href="index.html">Home</a></nav>
     </header>
     <main class="container mt-5 text-center h-100">
-      <h1 class="fw-bolder">Inserisci un nuovo prodotto</h1>
+      <h1 id="title" class="fw-bolder"></h1>
       <form id="productForm" class="container mt-3 d-flex flex-column">
         <fieldset class="container mt-3 d-flex flex-column">
           <label for="productName" class="mt-3 fw-bold fs-4"
