--- a/details.html
+++ b/details.html
@@ -26,7 +26,14 @@
       />
       <a href="back-office.html">Back Office</a>
     </header>
-    <main class="container mt-3"></main>
+    <main class="container mt-3 m-auto mt-5 p-5">
+      <section class="d-flex align-items-center justify-content-between">
+        <h1>Details</h1>
+        <a href="index.html" class="text-end text-decoration-none">🔙Go Back</a>
+      </section>
+      <hr />
+      <section class="container-fluid mt-3 row m-auto" id="main"></section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
