--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
       <a href="back-office.html">Back Office</a>
     </header>
 
-    <main
-      id="main"
-      class="container-fluid mt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center"
-    ></main>
+    <main>
+      <section
+        id="title"
+        class="container-fluid d-flex justify-content-center align-items-center"
+      >
+        <h1>Title</h1>
+      </section>
+      <section
+        id="cards"
+        class="container-fluid mt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center"
+      ></section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
