--- a/details.html
+++ b/details.html
@@ -27,6 +27,10 @@
       <a href="back-office.html">Back Office</a>
     </header>
     <main class="container mt-3 m-auto mt-5 p-5">
+      <div
+        id="alert-container"
+        class="position-fixed top-50 start-50 translate-middle-x w-50"
+      ></div>
       <section class="d-flex align-items-center justify-content-between">
         <h1>Details</h1>
         <a href="index.html" class="text-end text-decoration-none">🔙Go Back</a>
