--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
       <a href="back-office.html">Back Office</a>
     </header>
 
-    <main>
+    <main class="mt-5">
+      <div
+        id="alert-container"
+        class="position-fixed top-50 start-50 translate-middle-x w-50"
+      ></div>
+
       <section
         id="title"
         class="container-fluid d-flex justify-content-center align-items-center"
       >
-        <h1>Title</h1>
+        <h1 class="fw-bolder">PRODOTTI</h1>
       </section>
       <section
         id="cards"
