--- a/back-office.html
+++ b/back-office.html
@@ -24,7 +24,20 @@
         src="https://cdn.freebiesupply.com/images/large/2x/amazon-logo-white.png"
         alt="Crudazone logo"
       />
-      <nav><a href="index.html">Home</a></nav>
+      <nav id="nav">
+        <div class="btn-group dropstart">
+          <button
+            type="button"
+            class="btn btn-black dropdown-toggle text-white"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Carrello 🛒
+          </button>
+          <ul id="dropdown" class="dropdown-menu px-5 py-3"></ul>
+        </div>
+        <a href="index.html">Home</a>
+      </nav>
     </header>
     <main class="container mt-5 text-center h-100">
       <div
