--- a/details.html
+++ b/details.html
@@ -28,12 +28,17 @@
         <div class="btn-group dropstart">
           <button
             type="button"
-            class="btn btn-black dropdown-toggle text-white"
+            class="btn btn-black dropdown-toggle text-white d-flex justify-content-center align-items-center"
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Carrello 🛒
-          </button>
+            🛒 Carrello&nbsp;
+            <span
+              id="itemNumber"
+              class="bg-warning text-black fw-bold px-2 rounded-5"
+              >0</span
+            ></button
+          >>
           <ul id="dropdown" class="dropdown-menu px-5 py-3"></ul>
         </div>
         <a href="back-office.html">Back Office</a>
