--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
         <div class="btn-group dropstart">
           <button
             type="button"
-            class="btn btn-black dropdown-toggle text-white"
+            class="btn btn-black dropdown-toggle text-white d-flex justify-content-center align-items-center"
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Carrello 🛒
+            🛒 Carrello&nbsp;
+            <span
+              id="itemNumber"
+              class="bg-warning text-black fw-bold px-2 rounded-5"
+              >0</span
+            >
           </button>
           <ul id="dropdown" class="dropdown-menu px-5 py-3"></ul>
         </div>
@@ -40,7 +45,7 @@
       </nav>
     </header>
 
-    <main class="mt-5">
+    <main class="container-fluid mt-5">
       <div
         id="alert-container"
         class="position-fixed top-50 start-50 translate-middle-x w-50"
@@ -48,13 +53,13 @@
 
       <section
         id="title"
-        class="container-fluid d-flex justify-content-center align-items-center"
+        class="container d-flex justify-content-center align-items-center"
       >
         <h1 class="fw-bolder">PRODOTTI</h1>
       </section>
       <section
         id="cards"
-        class="container-fluid mt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center"
+        class="container m-auto mt-3 row row-cols-4"
       ></section>
     </main>
     <script
