Commit progetto terminato

--- a/details.html
+++ b/details.html
@@ -24,7 +24,7 @@
         src="https://cdn.freebiesupply.com/images/large/2x/amazon-logo-white.png"
         alt="Crudazone logo"
       />
-      <nav id="nav">
+      <nav id="nav" class="d-flex align-items-center">
         <div class="btn-group dropstart">
           <button
             type="button"
